# iceberg-metadata-migration

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  justfile  prek.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CATALOG.md  CLI.md  DEPLOYMENT.md  DEVELOPMENT.md  FLOW.md  INFRASTRUCTURE.md  LAMBDA.md  TESTING.md
docs/adr/: 0001-shared-core-thin-entry-points.md  0002-lambda-failure-contract.md  0003-container-image-packaging.md  0004-no-internet-vpc-iac-scope.md
docs/plans/: 2026-04-06-multi-engine-validation.md
docs/specs/: multi-engine-validation-design.md
infra/: copy_to_s3.sh  docker-compose.yml  postgres-init.sql  seed_iceberg_table.py  verify_migration.sh
infra/seed/: common.py  seed_hms.py  seed_rest.py  seed_sql.py
infra/spark_jobs/: verify_emr.py  verify_glue.py
infra/terraform/: backend.tfvars.example  lambda.tf  main.tf  terraform.tfvars.example  variables.tf
infra/terraform/sandbox/: backend.tf  main.tf  (+2 more)
src/iceberg_migrate/: __init__.py  cli.py  core.py  lambda_handler.py  models.py  s3.py
tests/: conftest.py  test_models.py
tests/fixtures/: v1.metadata.json  v3_manifest_with_dv.py
tests/integration/: conftest.py  test_athena_verify.py  test_emr_verify.py  test_glue_verify.py  test_hms_catalog.py  test_lambda_invoke.py  test_rest_catalog.py  test_sql_catalog.py
tests/test_catalog/: test_catalog_base.py  test_glue_registrar.py  test_glue_regression.py  test_registry.py  test_rest_registrar.py
tests/test_discovery/: test_compression.py  test_locator.py  test_reader.py
tests/test_integration/: test_end_to_end.py
tests/test_lambda/: test_handler.py
tests/test_rewrite/: test_avro_rewriter.py  test_avro_rewriter_v3.py  test_config.py  test_engine.py  test_graph_loader.py  test_integration.py  test_metadata_rewriter.py  test_migrated_keys.py
tests/test_validation/: test_validator.py
tests/test_writer/: test_s3_writer.py
(+19 files in other folders)
