[project]
name = "iceberg-migrate"
version = "0.1.0"
description = "Rewrite Iceberg metadata paths after DataSync migration"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.24.59",
    "fastavro==1.12.1",
    "orjson>=3.9.0",
    "pydantic==2.12.5",
    "typer==0.24.1",
]

[project.scripts]
iceberg-migrate = "iceberg_migrate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iceberg_migrate"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
    "ruff>=0.4",
]
