[project]
name = "iceberg-migrate"
version = "0.1.0"
description = "Rewrite Apache Iceberg (v2/v3) metadata paths after data migration to AWS S3 and register in Glue Catalog"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.24.59",
    "fastavro==1.12.1",
    "httpx>=0.25.0",
    "orjson>=3.9.0",
    "pydantic==2.12.5",
    "pyiceberg[glue]==0.11.1",
    "rich",
    "typer==0.24.1",
]

[project.scripts]
iceberg-migrate = "iceberg_migrate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iceberg_migrate"]

[tool.basedpyright]
include = ["src"]
reportCallInDefaultInitializer = false
reportExplicitAny = false
reportUnusedCallResult = false
reportAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportInvalidCast = false
reportMissingTypeArgument = false
reportUnusedParameter = false
reportUnannotatedClassAttribute = false
reportUnusedImport = "warning"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3,glue]>=5.0",
    "ruff>=0.4",
    "boto3-stubs[s3,glue]",
    "pyarrow>=14.0",
    "pyiceberg[s3fs,sql-sqlite]==0.11.1",
    "basedpyright>=1.29",
    "prek>=0.1",
]
